Made some minor additions to group aliases
Made some minor additions to group aliases, no idea how this works, tried doing what seemed useful

--- a/NameLayerMain/plugin.yml
+++ b/NameLayerMain/plugin.yml
@@ -7,24 +7,24 @@ softdepend: [Mercury]
 description: NameLayer handles groups creation and management, in addition to name changes. Once you have connected to Civcraft with a name, it is permanently yours. If a name is already taken, then NameLayer will add a number to the name.
 commands:
    nlag:
-    aliases: [nlacceptinvite, nlacceptgroup]
+    aliases: [nlacceptinvite, nlacceptgroup, nlaccept, nla]
    nlcg:
-    aliases: [nlcreategroup]
+    aliases: [nlcreategroup, nlcreate, nlc]
    nldg:
-    aliases: [nldeletegroup]
+    aliases: [nldeletegroup, nldelete, nld]
    nldig:
     aliases: [nldisiplinegroup, nldisablegroup, nldisable]
     permission: namelayer.admin
    nlgls:
     aliases: [nlglobalstats]
    nlgs:
-    aliases: [nlgroupstats]
+    aliases: [nlgroupstats, nlstats, nls]
    nlid:
     aliases: [nlinfodump]
    nlip:
-    aliases: [nlinviteplayer, nlinvite]
+    aliases: [nlinviteplayer, nlinvite, nli]
    nljg:
-    aliases: [nljoingroup, nljoin]
+    aliases: [nljoingroup, nljoin, nlj]
    nllg:
     aliases: [nllistgroups, nllistg]
    nllm:
@@ -32,13 +32,13 @@ commands:
    nllp:
     aliases: [nllistpermissions, nllistperms]
    nlpp:
-    aliases: [nlpromoteplayer, nlpromote]
+    aliases: [nlpromoteplayer, nlpromote, nlp]
    nlmg:
-    aliases: [nlmergegroups, nlmerge]
+    aliases: [nlmergegroups, nlmerge, nlm]
    nlmp:
     aliases: [nlmodifyperms, nlmodifypermissions, nlmodperms]
    nlrm:
-    aliases: [nlremovemember, nlremove, nlkick]
+    aliases: [nlremovemember, nlremove, nlkick, nlk, nlr]
    nlri:
     aliases: [nlrevokeinvite, nluninvite]
    nlrsg:
@@ -55,7 +55,7 @@ commands:
    nllci:
     aliases: [nllistcurrentinvites, nllistinvites]
    nltaai:
-    aliases: [nlautoacceptinvites, nlautoaccept]
+    aliases: [nlautoacceptinvites, nlautoaccept, nlaa]
    nlcpn:
       permission: namelayer.admin
    nlsdg:
