First step for table rework
Large scale changes for player type rework

Code changes?

Halfway through refactoring commands

Update a few more commands

Update more commands

Even more command fixes

Even more command fixes and adding commands to interact with new player types

Wrap up commands and minor other fixes

Minor fixes and update group overview gui

Close gui after merge

Begin integrating new player type functionality into gui

Further improve GUI

Done with gui changes, now only need to test everything

Add new commands to plugin.yml

rebase to include new stuff (warning: DAO manager not rebase complete)

--- a/namelayer-spigot/src/main/resources/plugin.yml
+++ b/namelayer-spigot/src/main/resources/plugin.yml
@@ -16,12 +16,8 @@ commands:
    nldig:
     aliases: [nldisiplinegroup, nldisablegroup, nldisable]
     permission: namelayer.admin
-   nlgls:
-    aliases: [nlglobalstats]
    nlgs:
     aliases: [nlgroupstats]
-   nlid:
-    aliases: [nlinfodump]
    nlip:
     aliases: [nlinviteplayer, nlinvite, invite]
    nljg:
@@ -30,7 +26,6 @@ commands:
     aliases: [nllistgroups, nllistg, listgroups]
    nllm:
     aliases: [nllistmembers, nllistm, listmembers]
-   nllcm:
    nllp:
     aliases: [nllistpermissions, nllistperms, listpermissions]
    nlpp:
@@ -43,9 +38,6 @@ commands:
     aliases: [nlremovemember, nlremove, nlkick, kickmember, removemember]
    nlri:
     aliases: [nlrevokeinvite, nluninvite, revoke, uninvite, revokeinvite]
-   nllink:
-   nlunlink:
-   nllsg:
    nlsp:
     aliases: [nlsetpassword, nlsetpass, setpass, setpassword]
    nltg:
@@ -66,15 +58,13 @@ commands:
     aliases: [nlsetdefaultgroup, nlsetdefault, setdefault, setdefaultgroup]
    nlgdg:
     aliases: [nlgetdefaultgroup, nlgetdefault, getdefaultgroup]
-   nlun:
-    aliases: [updatename]
-   nlsbl:
-    aliases: [showblacklist, listblacklist]
-   nlbl:
-    aliases: [blacklist, addblacklist]
-   nlubl:
-    aliases: [removeblacklist, unblacklist]
    nl:
+   nlapt:
+    aliases: [nlcpt, nlcreateplayertype, createplayertype, addplayertype, nladdplayertype]
+   nlrpt:
+    aliases: [nlrenameplayertype, nlchangeplayertypename, changeplayertypename, renameplayertype, renamerank]
+   nldpt:
+    aliases: [nldeleteplayertype, deleteplayertype, nlremoveplayertype, removeplayertype]
 
 permissions:
    namelayer.admin:
