--- a/namelayer-bungee/pom.xml
+++ b/namelayer-bungee/pom.xml
@@ -15,27 +15,40 @@
   <packaging>jar</packaging>
 
   <dependencies>
-    <dependency>
+<!--    <dependency>
       <groupId>vg.civcraft.mc.namelayer</groupId>
       <artifactId>namelayer-spigot</artifactId>
       <version>1.0.0</version>
-    </dependency>
+      <scope>compile</scope>
+    </dependency>-->
 
     <dependency>
       <groupId>net.md-5</groupId>
       <artifactId>bungeecord-protocol</artifactId>
       <version>1.10-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.md-5</groupId>
       <artifactId>bungeecord-api</artifactId>
       <version>1.10-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.md-5</groupId>
       <artifactId>bungeecord-proxy</artifactId>
       <version>1.10-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
+
+    <!-- Hikari -->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>2.4.5</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
