--- a/namelayer-spigot/pom.xml
+++ b/namelayer-spigot/pom.xml
@@ -26,6 +26,7 @@
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
       <version>1.10-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Civcraft -->
@@ -38,16 +39,8 @@
     <dependency>
       <groupId>vg.civcraft.mc.civmodcore</groupId>
       <artifactId>CivModCore</artifactId>
-      <version>1.4.51</version>
+      <version>1.5.0</version>
       <scope>provided</scope>
-    </dependency>
-    
-    <!-- Hikari -->
-    <dependency>
-      <groupId>com.zaxxer</groupId>
-      <artifactId>HikariCP</artifactId>
-      <version>2.4.5</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -63,22 +56,22 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>2.3</version>
-        <configuration>
-          <filters>
-            <filter>
-              <artifact>com.zaxxer:HikariCP</artifact>
-              <includes>
-                <include>**</include>
-              </includes>
-            </filter>
-          </filters>
-        </configuration>
         <executions>
           <execution>
             <phase>package</phase>
             <goals>
               <goal>shade</goal>
             </goals>
+            <configuration>
+              <filters>
+                <filter>
+                  <artifact>com.zaxxer:HikariCP</artifact>
+                  <includes>
+                    <include>**</include>
+                  </includes>
+                </filter>
+              </filters>
+            </configuration>
           </execution>
         </executions>
       </plugin>
